# text-adventure

./: README.md  meson.build
data/: app.gresource.xml  application.css  com.github.bartzaalberg.text-adventure.appdata.xml.in  com.github.bartzaalberg.text-adventure.desktop.in  com.github.bartzaalberg.text-adventure.gschema.xml
debian/: changelog  control
po/: com.github.bartzaalberg.php-tester.pot
po/extra/: POTFILES  extra.pot
src/: Application.vala  CommandLister.vala  CommandLogRow.vala  Constants.vala  InputReactor.vala  Item.vala  Items.vala  Location.vala  Locations.vala  MainWindow.vala  Player.vala  StackManager.vala  TextHelper.vala
src/Views/: CommandsView.vala  WelcomeView.vala
